
* 1.3.0 (unreleased)

** New features

- The prompt for file actions now supports wildcards.

- The command ~magit-annex-unused~ now supports arguments through the
  new popup ~magit-annex-unused-popup~.  A new command
  ~magit-annex-unused-reflog~ has also been added to the popup.
  ~magit-annex-unused-popup~ has replaced ~magit-annex-unused-popup~
  in the top-level Magit-annex popup.

** Interface changes

- The command ~magit-annex-unused-log~ has been replaced by
  ~magit-annex-unused-log-popup~, a command which calls
  ~magit-log-popup~ but sets the ~-S~ flag to the key of the unused
  file at point.  The new option ~magit-annex-unused-stat-argument~
  controls whether the flag ~--stat~ is also added.

- ~magit-annex-unused-sections-hook~ has been removed.

* 1.2.0

** New features

- Commands that prompt for a file have been updated to accept multiple
  files.  The popup for acting on every file as be replaced with an
  entry the multiple-file prompt.

- New option magit-annex-confirm-all-files controls whether or not
  empty input in the file prompt, which means to act on all files, has
  to be confirmed by the user.

- New option magit-annex-include-directories determines whether
  directories are listed in the file prompt.

* 1.1.0

Magit-annex has been updated for the latest version of Magit and now
requires version 2.3.0 or later.

* 1.0.0

** New features

- New mode ~magit-annex-unused-mode~ provides an interface for
  browsing and managing unused files.
- New mode ~magit-annex-list-mode~ displays the output of
  ~git annex list~.

** Interface changes

- The annex pushing menu has been removed.  The 'git-annex' branch can
  be pushed using main pushing menu in Magit 2.1.0, which makes it
  easy to push branches without checking them out.

** Other

- magit-annex has been updated for Magit version 2.1.0.

* 0.10.0

** Interface changes

- Use popup menu for annex commands.  Annex push and merge commands are
  now under this menu.

** New features
